# CS3750_Project

./: Cargo.toml  README.md
logs/: system_log_1747159187.json  system_log_1747159324.json  system_log_1747159482.json  system_log_1747167912.json  system_log_1747169442.json  system_log_1747333289.json  system_log_1747352729.json  system_log_1747353305.json  system_log_1747353327.json  system_log_1747353345.json  system_log_1747638957.json  system_log_1747705213.json  system_log_1747735140.json  system_log_1747739578.json
src/: cli.rs  games.rs  gui.rs  hardware.rs  logger.rs  main.rs  modes.rs  permissions.rs  reset.rs  status.rs  test.rs  test_gpu.rs
