[package]
name = "CS3750_Project"
version = "0.1.0"
edition = "2021"
default-run = "CS3750_Project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"]}
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
glob = "0.3"
nix = "0.27"
[[bin]]
name = "test_gpu"
path = "src/test_gpu.rs"
